fix that annoying graalvm error